// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> matches snapshot 1`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="e151b8df-70e6-405e-aa5e-8f9b93f36f78"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="29c67d53-0972-4896-97d9-c0eee4886f48"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="29135180-1460-4c46-a80b-71170b183b13"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="e5404f7b-02a1-41e3-b9c4-e539dd4f6f76"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="bc15c8e2-992d-4027-b57a-77b96acf77da"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 2`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="fab4ab0d-80d0-4664-8e01-8b1182b0401e"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="f4dcb14d-90cd-47df-8961-0b94fc23ac10"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="9ebbf110-eb19-4462-97ed-44f5a78f9251"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="412969f8-26ee-4e2f-b983-1f7b29ed9acb"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="a5444283-5684-4bf3-a037-49280f5b4bfc"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 3`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="823ec66d-51b7-4a6f-8022-59d9cbe24d3b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="916367d8-68a6-45ff-be37-15465401fcf4"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="c98de0f2-b7d7-4247-875c-3aa87651a153"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="c8b3ba6e-3b3b-48f1-a23b-af489cd851d9"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="ceb950ce-38ac-426b-96ad-59bfa992fcc9"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 4`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="5c17b4b5-f347-4947-bb69-f1bdfcc82a67"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="440b0fb1-a256-4cb3-9c26-b8e83fe66cd5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="1ec881d0-2714-4535-9588-dce87e5c0b7f"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="9ae1d25a-618c-48c8-b061-60e1202afe08"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="5b26ce31-bbec-42f9-a8dd-72212c5a64ce"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 5`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="4a1c2a8e-1e34-458e-8946-1ef234d32dd6"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="9e4d186f-8cee-4635-b68e-a85f6c4c6fdb"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="acc03a51-eadc-435a-994e-8edad324248f"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="01dda9a2-0be4-4708-9c4e-16201cbdc43a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="c255f7ac-46b6-4b6a-85a8-9d667fd35a1a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 6`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="5de6d333-45d4-4b1e-b74c-61ef1ed2e008"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="1fba8683-2aea-4be3-91b2-385ae3e04f33"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="c6079234-af72-47fc-8bad-9bb0bd285de3"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="121ab400-1424-48b8-9a91-4f9f4d209c5b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="db080f04-7f8b-481e-bc5f-8eeb9fd81f9e"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 7`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="689cb4f3-bb56-45c2-b1bc-5490ae4fd1fd"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="262173d4-4767-4f2c-888f-43c39b64c213"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="61ddb645-5603-44a0-9bcc-5ee730115444"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="6e8227dc-0d38-4df0-95b2-fa32c241faee"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="538c50f9-aa59-4e75-8525-c4983f7b05c8"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 8`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="207c461d-3bcf-4131-973f-eb01d8d71a85"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="466c6df7-83e7-47a8-b846-d20b32e278c5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="3b73416e-9a38-406b-b0fe-5c0ba5b74a00"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="117273bc-9c17-49fa-972c-f1ef49c32213"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="96cbf223-dac5-4ce8-9911-6ee5d47a3d72"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 9`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="be634274-b34a-49d4-a6e9-cf8956a13091"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="6d01b054-9b8d-43fc-9715-778a96e37091"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="347136c2-5830-46a5-a75c-44c142fac4ce"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="479ede4f-8137-4340-91f2-777148d6c2dd"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="11bbf6fe-def6-4f20-b0c4-da03c7e8e71c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 10`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="904b3a8b-2adf-4974-b1ed-3101dbf1dcc7"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="396fc269-bff7-40dc-a0e8-6b739c95c0e9"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="cbdd1fc9-c6d5-4bab-b154-f6c7285b4ba3"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="6246454a-560b-4cfc-abcc-37320da69327"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="68ec6b3f-0634-4a86-a5c1-4f0b1b7df155"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 11`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="2fca5e19-6c7d-42ff-9f68-d9c424a86d44"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="8705d7a1-c50c-406b-9337-797bb0f0d71f"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="402f57d5-9e71-4215-a7b1-8ff842a141bb"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="0dfb7579-bd4c-48c5-8bd0-638c60ded161"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="16f43baa-0cf1-4e0f-9414-dd09f0e95e1d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 12`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="f1411385-1157-4d5e-a605-12e90aa15df4"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="8ed3a6c5-af1d-4697-a2f0-103d78687dfb"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="e542a5e0-a7f6-45c1-ab8c-e934c2b1a84b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="0269acad-a495-44bf-871e-3ebaeaf20837"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="da14fff9-0716-416a-ab27-5c7aa67f3e38"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 13`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="85fcd0b5-1758-4068-8b48-59463d6fb55b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="8c7d515f-ca21-4e87-a522-b24e671aeaf0"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="f486e52f-4e1b-40dc-8205-8715face381a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="51c28972-c09d-45c0-8b66-1af13415c004"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="d6245c82-f752-423f-a300-c802678a5ffb"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 14`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="9faf0b08-be30-4322-8247-21d5460c56f2"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="9a9ddcb9-b9bc-424d-8482-684e0863c4e1"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="47dfba32-9f23-4dc3-92fa-ff7b4e8f70e7"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="50cefc07-75eb-4e50-b11b-be490514c82d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="66fd0520-b3d9-4166-b227-efb57f4dc39d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 15`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="8c662931-b473-41a1-8a48-565c15799479"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="6d41bbc0-e69e-4523-bf2d-4fd60c6f7c3d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="3a7f84b0-db5e-4371-9d4d-23d76b5351b3"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="924a2139-42ad-46d1-8b48-1ed2c3e4e097"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="3222cc26-1aae-41dd-a54d-e3cc60b0e6d4"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 16`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="d2c97a7a-c6da-4363-846f-894a2475d42c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="2406c973-faae-44ab-b1d6-ba8bd6bcd988"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="1b8db39e-2d8d-4e2b-95de-7a66feaa47c5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="d4c29bd6-4c5f-4b65-8c27-e96d266a68b2"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="43d12809-b7a9-4b00-b12c-1c57d7719b6a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 17`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="2e819e94-f649-47f9-b4ae-cbb988ada58a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="11ff5601-fa65-4c18-8a9b-72340a121ead"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="31e4b50a-4e68-45f6-afb7-e2bcb7c34bcc"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="8202aae3-f265-4564-81b8-aca6c6f0645a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="416240c2-221f-4f80-9c00-b2c7c9c9fa6b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 18`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="05d30eef-6ee4-414a-8d49-b5519fe88f67"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="c32909f3-b9d2-4fc2-9342-f43e74786272"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="7f0fd978-ffce-4444-baba-edb9fd6ac717"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="1c3e9baf-3777-4543-b87e-870cc3b82bf5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="7718c420-fd65-4020-b9fb-97a6c227f985"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 19`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="f30061f4-d08f-4f39-bfeb-c966cbeaf446"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="0a693238-872b-48b0-a277-ce8678f49207"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="72fec1fe-0c73-43d7-af27-8f47ff3b9f02"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="8378f54e-5d09-452b-b365-36ebe5a9a7b6"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="2cbe1008-44f3-4d23-8c74-5b4a8dfb9c12"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 20`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="969574d4-20b5-4d8c-b622-648962cd6eec"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="58d0c63c-6199-4068-b3d7-f188fca81a34"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="583d52f7-b1e8-4d24-9c34-967d1fe698b1"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="394220c6-56d0-4960-b7d9-5056797fec5c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="cfe28d54-f43f-474f-abb8-07f5eef116c5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 21`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="d625743b-23ec-4d18-adfe-d177a7079cef"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="74b51a35-6511-424e-848a-dbc222c03c02"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="c6702aa9-8ef8-4061-8341-7db8a18aced2"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="a1f8397e-13b0-4bb1-a22d-5e511febf7c0"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="f384b2f5-124c-41ac-a3fc-d180e9aaaa81"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 22`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="7bd9d249-9c0d-4f84-8045-43a36feac3ac"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="227a37c7-ca54-40c1-aa60-b009d0028b5c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="fefac098-f0fa-417e-87a9-3ee27e3dc423"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="d491f1b8-865b-48a4-a69f-3fad80e1b30b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="1fceda31-ba34-4e81-9344-89b7d2becfd4"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 23`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="1d81a75c-ec70-445f-9fe8-266adf7b6156"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="c7705993-3b4d-473a-81bb-b88262942079"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="152249a8-7a5e-4dd7-90e7-e6d1edd8028c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="5ab3efc2-73e4-4a06-bff6-c631280fba18"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="58dcb81f-775b-43be-b77a-7051b169bd5f"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 24`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="d064b3c9-1088-4dd0-873b-162494cf3d93"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="bf8b21c4-54e1-4481-8e8e-e7f53181c471"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="0591c9c2-fe30-4d54-8766-4c805a58d61d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="b346e6f1-8bff-4b30-9934-b7d8768096a6"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="d5fe7404-a721-4e6b-b5f1-1bdb9fb21457"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 25`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="16b01933-a1f7-4397-a39e-af0314726104"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="68939b2c-d026-4699-9372-f5d05065286e"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="5661ab31-214c-4a4e-b74b-d03f74a0cf7f"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="5e0e46dd-7c5e-48c1-b603-dbdd768bce0e"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="55d73161-f697-4eba-a931-29bc3459e5e6"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 26`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="f1700b42-c8e8-4e1e-9dc4-5ea8605e31f7"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="e0881628-f38c-4479-bef8-b48860d2a991"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="b900aab0-c9ad-418e-a242-8c8a5ac7f272"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="6e8c5726-2569-4db4-ad3c-a4eb5ba1a4e2"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="ed78ee66-db53-4457-adad-45df7064b475"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 27`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="37ff6ccc-1115-4b4c-afe0-43c07f6317a1"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="eef5e418-d02c-4cc4-812a-12e9f1bf3534"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="3dc5699e-c88e-46f6-a86d-92c2eb1f6dfc"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="883e5ca6-28ac-4027-9843-594ae9a07a1c"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="a99380f1-5e7d-4a4d-b28e-7acb586f0180"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 28`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="2925ba46-1ad5-418d-8e7d-6a748b4b7452"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="e3f1f31e-5115-4b05-924d-147a8c96027a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="0a27e425-7a6b-49d9-a4e5-021d1ee0fa34"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="6142278a-d93d-4d89-b386-6e3036a1ce91"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="6e4a6048-18b4-4ac1-b496-61555ff38a45"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 29`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="f9790d2c-7856-4c58-872e-216d03130e1a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="51380897-0dbb-4834-84a5-04c67002529a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="609af986-26bd-434e-8907-24b6a8d99e02"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="c4fdee3e-831f-4e14-9649-c1e6ffb415aa"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="ed220894-ce9f-4c86-841d-8d11bb2687d9"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 30`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="31bf2ecc-51e7-4178-8ca8-4f6490b808aa"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="e1649d5f-e508-4983-b772-d02d88a98433"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="c9d56d55-cd66-4e0b-a973-d5a70484cd1a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="83228fe2-b97c-488b-887e-94841455d80d"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="58dd0223-034f-4257-9356-fa7561ce3729"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 31`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="62f5c6d8-4774-4f20-9704-baa21a53791a"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="7804d289-5aaf-4590-92b5-89c02f1e12b3"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="f62dd55b-f462-45de-b82f-fc953eacfd27"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="03df1524-5c46-4297-811d-58cd3b87d0f5"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="f0d6424a-3510-41ea-8bb8-2c1005303c9b"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Navigation /> matches snapshot 32`] = `
<div
  class="sc-AxirZ jpgewr sc-AxhUy eKirhA"
>
  <h5
    class="sc-AxiKw bKvGHD"
  >
    Navigation
  </h5>
  <ul
    class="sc-AxhCb kjumFH"
  >
    <li
      id="454b9b71-7ef8-45da-bafd-98b686a30142"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/"
        target="_self"
      >
        Home
      </a>
    </li>
    <li
      id="0457355c-bfd9-42d2-afb2-300dcddc1f52"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauces"
        target="_self"
      >
        All Sauces
      </a>
    </li>
    <li
      id="aab8cd7b-48de-44d5-8410-2e56213a1534"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/sauce/add"
        target="_self"
      >
        Add Sauce
      </a>
    </li>
    <li
      id="6d7e153d-9198-4399-a04f-0bfdde9906ea"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/register"
        target="_self"
      >
        Register
      </a>
    </li>
    <li
      id="3af740d7-2a28-4488-9c96-9703f7cb07d1"
    >
      <a
        class="sc-AxjAm kGmApj"
        href="/account/login"
        target="_self"
      >
        Log In
      </a>
    </li>
  </ul>
</div>
`;
